# Multi-Agent

./: .env.example  .gitignore  README  README.md  requirements.txt
miniai/: README  __init__.py  config.py  llm_client.py  memory.py  models.py  observability.py  pyproject.toml  requirements.txt  utils.py  vectorstore.py
miniai/chains/: __int__.py  base.py  controller.py  execution.py  main.py  task_creation.py  task_prioritization.py
src/: benchmarking.py  config.py  coordinator.py  llm_client.py  main.py  types.py
src/agents/: base_agent.py  evaluation_agent.py  execution_agent.py  planning_agent.py  research_agent.py
src/memory/: knowledge_store.py
src/utils/: logging.py
